--- a/src/ingress/values.yaml
+++ b/src/ingress/values.yaml
@@ -1,23 +1,16 @@
 global:
   ingress:
     enabled: true
-    hostname: "test@harness.com"
+    hostname: "blah.foo.com"
     ingressClassName: ""
 
 
-accessControl:
-  enabled: true
-  apiVersion: ""
-  ingressClassName: ""
-  hostname: access-control
-  path: /authz(/|$)(.*) 
-  pathType: ImplementationSpecific
-  serviceName: access-control
-  servicePort: 9006
-  annotations: {}
-  tls: false
-  extraHosts: []
-  extraPaths: []
-  extraTls: []
-  secrets: []
-  extraRules: []
+modules:
+  - access-control:
+      path: /authz(/|$)(.*) 
+      servicePort: 9006
+      annotations: {}
+  - gateway:
+      path: /gateway(/|$)(.*) 
+      servicePort: 20023
+      annotations: {}
