--- a/src/ingress/templates/ingress.yaml
+++ b/src/ingress/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{ range $m := .Values.modules }}
 {{ range $key, $value := $m }}
-{{ include "harness.ingress" (dict "name" $key "settings" $value "global" $.Values.global "context" $.Values ) }}
+{{ include "harness.ingress" (dict "name" $key "settings" $value "global" $.Values.global "context" $ ) }}
 ---
 {{ end }}
 {{ end }}
